deploy: 625d9bc7dfc85e6f9f8894926766e876144f3d30

--- a/print.html
+++ b/print.html
@@ -154,8 +154,8 @@
 <li>Convention Over Configuration</li>
 </ul>
 <h2 id="status"><a class="header" href="#status">Status</a></h2>
-<p>rusty-gql is still an experimental project. APIs and the artitecture are subject to change.</p>
-<p>It is not yet recommended for use in a production.</p>
+<p>rusty-gql is still an experimental project. APIs and the architecture are subject to change.</p>
+<p>It is not yet recommended for use in production.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="getting-started"><a class="header" href="#getting-started">Getting Started</a></h1>
 <h2 id="install-rusty-gql-cli"><a class="header" href="#install-rusty-gql-cli">Install rusty-gql-cli</a></h2>
 <pre><code>cargo install rusty-gql-cli
