--- a/introduction.html
+++ b/introduction.html
@@ -153,8 +153,8 @@
 <li>Convention Over Configuration</li>
 </ul>
 <h2 id="status"><a class="header" href="#status">Status</a></h2>
-<p>rusty-gql is still an experimental project. APIs and the artitecture are subject to change.</p>
-<p>It is not yet recommended for use in a production.</p>
+<p>rusty-gql is still an experimental project. APIs and the architecture are subject to change.</p>
+<p>It is not yet recommended for use in production.</p>
 
                     </main>
 
