--- a/print.html
+++ b/print.html
@@ -827,7 +827,7 @@ enum GqlErrorType {
 <li>Calculate Query complexity</li>
 <li>Apollo tracing</li>
 <li>Apollo Federation</li>
-<li>Apollo Persisted Query</li>
+<li>Automatic Persisted Query</li>
 <li>etc.</li>
 </ul>
 
