--- a/roadmap.html
+++ b/roadmap.html
@@ -151,7 +151,7 @@
 <li>Calculate Query complexity</li>
 <li>Apollo tracing</li>
 <li>Apollo Federation</li>
-<li>Apollo Persisted Query</li>
+<li>Automatic Persisted Query</li>
 <li>etc.</li>
 </ul>
 
